--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
     - images/app/profile_pictures/
     - images/app/on_boarding/
     - images/app/profile_pictures/
+    - images/app/home/
 
 
 flutter_intl:
