--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
     - images/app/on_boarding/
     - images/app/profile_pictures/
     - images/app/profile_pictures/placeholder/
+    - images/icons/
 
 
 flutter_intl:
