--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   mask_text_input_formatter: ^2.0.0
   mockito: ^5.0.16
   simple_animations: ^4.0.1
+  platform: ^3.1.0
 
 dev_dependencies:
   flutter_test:
