feat_commit_test

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ flutter:
     - images/app/profile_pictures/placeholder/
     - images/icons/
     - images/app/search_pictures/placeholder/
+    - lib/app/modules/main_module/modules/search_module/mockup_results/
+
+
 
 
 flutter_intl:
