feat: add sucess feedback dialog and contact service

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ flutter:
     - images/app/home/drawer/
     - images/app/profile_pictures/placeholder/
     - images/icons/
-
+    - images/illustrations/
 
 flutter_intl:
   enabled: true
