--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,24 +13,38 @@ dependencies:
     sdk: flutter
   flutter_localizations: 
     sdk: flutter
-  cupertino_icons: ^1.0.2
+
+  #Funcionalidades do Sistema
   flutter_modular: ^4.1.2
-  rxdart: ^0.27.2
-  dio: ^4.0.0
-  intl_utils: ^2.4.1
-  google_fonts: ^2.3.1
-  flutter_launcher_icons: ^0.9.2
-  shared_preferences: ^2.0.8
-  smooth_page_indicator: ^1.0.0+2
-  flutter_svg: ^0.22.0
-  plugin_platform_interface: ^2.0.2
   provider: ^6.0.1
-  mask_text_input_formatter: ^2.0.0
-  mockito: ^5.0.16
-  simple_animations: ^4.0.1
+  plugin_platform_interface: ^2.0.2
   platform: ^3.1.0
   build_runner: ^2.1.10
   logger: ^1.1.0
+  meta: ^1.7.0
+
+  #Requisições HTTP
+  dio: ^4.0.0
+
+  #Internacionalização
+  intl_utils: ^2.4.1
+
+  #Estilização
+  google_fonts: ^2.3.1
+  cupertino_icons: ^1.0.2
+  flutter_launcher_icons: ^0.9.2
+  mask_text_input_formatter: ^2.0.0
+
+  #Componentes
+  smooth_page_indicator: ^1.0.0+2
+  flutter_svg: ^0.22.0
+  simple_animations: ^4.0.1
+
+  #Armazenamento
+  shared_preferences: ^2.0.8
+
+  #Testes
+  mocktail: ^0.3.0
 
 
 dev_dependencies:
@@ -58,6 +72,7 @@ flutter:
     - images/app/profile_pictures/placeholder/
     - images/icons/
     - images/app/search_pictures/placeholder/
+    - test/src/service/api/modules/auth/mocks/
 
 
 
