--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   plugin_platform_interface: ^2.0.2
   platform: ^3.1.0
   build_runner: ^2.1.10
-  logger: ^1.1.0
+  logger: 
   meta: ^1.7.0
 
   #Requisições HTTP
