--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - images/modules/core/empty/
     - images/modules/core/icons/
     - images/modules/core/placeholder/
+    - images/modules/core/review/
     
 
 flutter_intl:
