--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,33 +15,32 @@ dependencies:
     sdk: flutter
 
   #Funcionalidades do Sistema
-  flutter_modular: ^4.1.2
-  provider: ^6.0.1
-  plugin_platform_interface: ^2.0.2
+  flutter_modular: ^5.0.3
+  provider: ^6.0.3
+  plugin_platform_interface: ^2.1.2
   platform: ^3.1.0
-  build_runner: ^2.1.10
-  logger: 
+  logger: ^1.1.0
   meta: ^1.7.0
 
   #Requisições HTTP
-  dio: ^4.0.0
+  dio: ^4.0.6
 
   #Internacionalização
   intl_utils: ^2.4.1
 
   #Estilização
-  google_fonts: ^2.3.1
+  google_fonts: ^3.0.1
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.2
   mask_text_input_formatter: ^2.0.0
 
   #Componentes
   smooth_page_indicator: ^1.0.0+2
-  flutter_svg: ^0.22.0
+  flutter_svg: ^1.1.1+1
   simple_animations: ^4.0.1
 
   #Armazenamento
-  shared_preferences: ^2.0.8
+  shared_preferences: ^2.0.15
 
   #Testes
   mocktail: ^0.3.0
@@ -50,8 +49,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
-  modular_test: ^1.0.1+1
+  flutter_lints: ^2.0.1
+  modular_test: ^2.0.0
 
 flutter_icons:
   android: true
