--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
 
   #Componentes
   smooth_page_indicator: ^1.0.0+2
-  flutter_svg: ^1.1.1+1
+  flutter_svg: ^1.1.4
   simple_animations: ^4.0.1
 
   #Armazenamento
@@ -75,7 +75,8 @@ flutter:
     - images/modules/core/empty/
     - images/modules/core/icons/
     - images/modules/core/placeholder/
-    - images/modules/core/review/
+    - images/modules/review/
+ 
     
 
 flutter_intl:
