--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations: 
+  flutter_localizations:
     sdk: flutter
 
   #Funcionalidades do Sistema
@@ -21,6 +21,8 @@ dependencies:
   platform: ^3.1.0
   logger: ^1.1.0
   meta: ^1.7.0
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
 
   #Requisições HTTP
   dio: ^4.0.6
@@ -34,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.2
   mask_text_input_formatter: ^2.0.0
+  lottie: ^1.4.3
 
   #Componentes
   smooth_page_indicator: ^1.0.0+2
@@ -76,8 +79,8 @@ flutter:
     - images/modules/core/icons/
     - images/modules/core/placeholder/
     - images/modules/review/
- 
-    
+
+
 
 flutter_intl:
   enabled: true
