feat: Internet Permission
fix: Fluxo de permissão de acesso à localização agora está funcionando corretamente

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.is_it_safe_app">
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="Is It Safe?"
         android:icon="@mipmap/ic_launcher">
