--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,6 +23,7 @@ dependencies:
   meta: ^1.7.0
   geolocator: ^9.0.2
   geocoding: ^2.0.5
+  visibility_detector: ^0.3.3
 
   #Requisições HTTP
   dio: ^4.0.6
@@ -85,3 +86,5 @@ flutter:
 flutter_intl:
   enabled: true
   main_locale: pt
+  arb_dir: lib/src/l10n
+  output_dir: lib/src/l10n
