--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,14 @@ dependencies:
   dotted_border: ^2.0.0
 
   #Armazenamento
-  shared_preferences: ^2.0.15
+  shared_preferences: ^2.0.17
 
   #Testes
   mocktail: ^0.3.0
   url_launcher: ^6.1.7
 
+  #Error Handling
+  result_dart: ^1.0.5
 
 
 dev_dependencies:
