--- a/.github/workflows/generalWorkflow.yml
+++ b/.github/workflows/generalWorkflow.yml
@@ -44,11 +44,8 @@ jobs:
 
       # Send message to Discord webhook
       - name: Send message to Discord
-        uses: discord/send-webhook@v1
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        uses: Ilshidur/action-discord@master
         with:
-          url: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          content: |
-            A new APK has been built:
-            ```
-            ${{ github.repository }} - branch/tag: ${{ github.ref }}
-            ```
+          args: "New version available"
