--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -24,6 +24,8 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.0.5
   image_picker: ^0.8.6
+  visibility_detector: ^0.3.3
+  overlay_support: ^2.1.0
 
   #Requisições HTTP
   dio: ^4.0.6
