--- a/.github/workflows/generalWorkflow.yml
+++ b/.github/workflows/generalWorkflow.yml
@@ -44,9 +44,9 @@ jobs:
 
       # Send message to Discord webhook
 
-      - name: Send message to Discord
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
-        uses: Ilshidur/action-discord@master
-        with:
-          args: "New version available"
+#       - name: Send message to Discord
+#         env:
+#           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
+#         uses: Ilshidur/action-discord@master
+#         with:
+#           args: "New version available"
