--- a/.github/workflows/generalWorkflow.yml
+++ b/.github/workflows/generalWorkflow.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           channel: 'stable'
           # Use the latest Flutter version available
-          flutter-version: 'latest'
+          flutter-version: 3.7.8
 
       # Install dependencies
       - name: Get dependencies
