--- a/.github/workflows/generalWorkflow.yml
+++ b/.github/workflows/generalWorkflow.yml
@@ -5,7 +5,7 @@ on:
     branches:
      # - main
       - release
-     # - dev
+      - dev
     tags:
       # Only build for tags that follow semantic versioning
       - 'v[0-9]+.[0-9]+.[0-9]+[0-9]'
