--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release CI/CD
 
 on:
   push:
-   # branches:
-     # - release
+    branches:
+      - release
     tags:
       # Only build for tags that follow semantic versioning
       - 'v[0-9]+.[0-9]+.[0-9]+[0-9]'
