--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Chave de assinatura
+key.properties
+/android/app/upload-keystore.jks
