--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,28 +28,29 @@ jobs:
       # Run tests
       - name: Run tests
         run: flutter test
-
-      # Build DEV APK
-      - name: Build DEV APK
-        run: flutter build apk -t lib/main.dart --release --flavor dev
-        
-      # Upload DEV APK as artifact
-      - name: Upload DEV APK
-        uses: actions/upload-artifact@v2
-        with:
-          name: app-dev
-          path: build/app/outputs/flutter-apk/app-dev.apk
-        
-      # Build PROD APK
-      - name: Build PROD APK
-        run: flutter build apk -t lib/main.dart --release --flavor prod
       
-      # Upload PROD APK as artifact
-      - name: Upload PROD APK
+      # Build App Bundle
+      - name: Build Prod App Bundle
+        run: flutter build appbundle -t lib/main.dart --release --flavor=prod
+      
+      # Upload App Bundle
+      - name: Upload Prod App Bundle
         uses: actions/upload-artifact@v2
         with:
-          name: app-prod
-          path: build/app/outputs/flutter-apk/app-prod.apk
+          name: app-prod-release
+          path: build/app/outputs/bundle/prodRelease/app-prod-release.aab
+
+        
+#       # Build PROD APK
+#       - name: Build PROD APK
+#         run: flutter build apk -t lib/main.dart --release --flavor prod
+      
+#       # Upload PROD APK as artifact
+#       - name: Upload PROD APK
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: app-prod
+#           path: build/app/outputs/flutter-apk/app-prod.apk
 
       # Send message to Discord webhook
 
