--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,9 +51,9 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.is_it_safe_app"
+        applicationId "com.isitsafe.app"
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
 
