--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       
       # Build App Bundle
       - name: Build Prod App Bundle
-        run: flutter build appbundle -t lib/main.dart --release --flavor=prod
+        run: flutter build appbundle -t lib/main.dart --release --flavor prod
       
       # Upload App Bundle
       - name: Upload Prod App Bundle
@@ -39,24 +39,3 @@ jobs:
         with:
           name: app-prod-release
           path: build/app/outputs/bundle/prodRelease/app-prod-release.aab
-
-        
-#       # Build PROD APK
-#       - name: Build PROD APK
-#         run: flutter build apk -t lib/main.dart --release --flavor prod
-      
-#       # Upload PROD APK as artifact
-#       - name: Upload PROD APK
-#         uses: actions/upload-artifact@v2
-#         with:
-#           name: app-prod
-#           path: build/app/outputs/flutter-apk/app-prod.apk
-
-      # Send message to Discord webhook
-
-#       - name: Send message to Discord
-#         env:
-#           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
-#         uses: Ilshidur/action-discord@master
-#         with:
-#           args: "New version available"
