--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
 
   #Funcionalidades do Sistema
+  flutter_flavor: ^3.1.1
   flutter_modular: ^5.0.3
   provider: ^6.0.3
   plugin_platform_interface: ^2.1.2
@@ -57,6 +58,9 @@ dependencies:
 
   #Monitoramento
   catcher: ^0.7.0
+
+dependency_overrides:
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
