--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,10 @@ dependencies:
   jwt_decode: ^0.3.1
 
   #Internacionalização
-  intl_utils: ^2.4.1
-
+  intl_utils: ^2.8.3
+  
   #Estilização
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.4
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.2
   mask_text_input_formatter: ^2.0.0
@@ -58,6 +58,9 @@ dependencies:
 
   #Monitoramento
   catcher: ^0.7.0
+
+dependency_overrides:
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
