--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,8 @@ publish_to: 'none'
 version: 1.0.6+10
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">= 3.0.0"
+  flutter: '>= 3.10.0'
 
 dependencies:
   flutter:
