--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -4,24 +4,42 @@ on:
   push:
     branches:
       - dev
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
 
-      # Set up Flutter
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-          # Use the latest Flutter version available
-          flutter-version: 3.7.8
+          flutter-version: '3.10.5'
 
-      # Install dependencies
       - name: Get dependencies
         run: flutter pub get
 
-      # Run tests
       - name: Run tests
-        run: flutter test
+        run: flutter test --coverage
+      
+      - name: Upload to code coverage
+        uses: codecov/codecov-action@v3
+        with:
+         token: ${{secrets.CODECOV_TOKEN}}
+         file: coverage/lcov.info
+
+      - name: Build App
+        run: flutter build apk -t lib/main_dev.dart --release
+
+      - name: Rename Artifact
+        run: mv build/app/outputs/flutter-apk/*.apk build/app/outputs/flutter-apk/app-$GITHUB_ISSUE_NUMBER-debug.apk
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-release
+          path: build/app/outputs/flutter-apk/app-$GITHUB_ISSUE_NUMBER-debug.apk
+
