--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -12,6 +12,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1.4.4
+        with:
+          java-version: 1.8
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v1
