--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -57,16 +57,18 @@ jobs:
       - name: Update version in YAML
         run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
           
-      - name: Download Android keystore
-        id: android_keystore
-        uses: timheuer/base64-to-file@v1.0.3
-        with:
-          fileName: upload-keystore.jks
-          encodedString: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+      - name: Decode Keystore
+        env:
+           ENCODED_STRING: ${{ secrets.ANDROID_KEYSOTRE_BASE64 }}
+           SIGNING_KEY_STORE_PATH: ${{ secrets.STORE_FILE }}
+ 
+        run: |
+           echo $ENCODED_STRING > keystore-b64.txt
+           base64 -d keystore-b64.txt > $STORE_FILE
           
       - name: Create key.properties
         run: |
-          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" >> android/key.properties
+          echo "storeFile=${{ secrets.STORE_FILE }}" > android/key.properties
           echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
