--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   image_picker: ^0.8.6
   visibility_detector: ^0.3.3
   overlay_support: ^2.1.0
+  brasil_fields: ^1.14.0
 
   #Requisições HTTP
   dio: ^4.0.6
