--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -57,21 +57,21 @@ jobs:
       - name: Update version in YAML
         run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
           
-      - name: Decode Keystore
-        env:
-           ENCODED_STRING: ${{ secrets.ANDROID_KEYSOTRE_BASE64 }}
-           STORE_FILE: ${{ secrets.STORE_FILE }}
+      # - name: Decode Keystore
+      #   env:
+      #      ENCODED_STRING: ${{ secrets.ANDROID_KEYSOTRE_BASE64 }}
+      #      STORE_FILE: ${{ secrets.STORE_FILE }}
  
-        run: |
-           echo $ENCODED_STRING > keystore-b64.txt
-           base64 -d keystore-b64.txt > $STORE_FILE
+      #   run: |
+      #      echo $ENCODED_STRING > keystore-b64.txt
+      #      base64 -d keystore-b64.txt > $STORE_FILE
           
-      - name: Create key.properties
-        run: |
-          echo "storeFile=${{ secrets.STORE_FILE }}" > android/key.properties
-          echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+      # - name: Create key.properties
+      #   run: |
+      #     echo "storeFile=${{ secrets.STORE_FILE }}" > android/key.properties
+      #     echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
+      #     echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
+      #     echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
       
       - uses: actions/setup-java@v3
         with:
@@ -99,11 +99,11 @@ jobs:
          file: coverage/lcov.info
 
       - name: Build Android Release App
-        env:
-           STORE_FILE: ${{ secrets.STORE_FILE }}
-           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-           STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
+        # env:
+        #    STORE_FILE: ${{ secrets.STORE_FILE }}
+        #    KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+        #    KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        #    STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
         run: flutter build apk -t lib/main_dev.dart --release
 
       - name: Rename Artifact
