resolvido problema em release

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,9 @@
 {
     "version": "0.2.0",
     "configurations": [
+
+
+      
       {
         "name": "PROD",
         "request": "launch",
@@ -14,10 +17,21 @@
         "name": "DEV",
         "request": "launch",
         "type": "dart",
+        "flutterMode": "release",
         "program": "lib/main_dev.dart",
-         "args": [
+        "args": [
           "--dart-define=flavor=dev",
         ]
-      }
+      },
+
+      // {
+      //   "name": "DEV",
+      //   "request": "launch",
+      //   "type": "dart",
+      //   "program": "lib/main_dev.dart",
+      //    "args": [
+      //     "--dart-define=flavor=dev",
+      //   ]
+      // }
     ]
   }
