--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,42 @@
 {
     "version": "0.2.0",
     "configurations": [
+   
       {
-        "name": "PROD",
+        "name": "PROD Debug",
         "request": "launch",
         "type": "dart",
         "program": "lib/main.dart",
         "args": [
           "--dart-define=flavor=prod",
-      ]
+        ]
       },
+      {
+        "name": "PROD Profile",
+        "request": "launch",
+        "flutterMode": "profile",
+        "type": "dart",
+        "program": "lib/main.dart",
+        "args": [
+          "--dart-define=flavor=prod",
+        ]
+      },
+      {
+        "name": "PROD Release",
+        "request": "launch",
+        "type": "dart",
+        "flutterMode": "release",
+        "program": "lib/main.dart",
+        "args": [
+          "--dart-define=flavor=prod",
+        ]
+      },
+     
+
       {
         "name": "DEV Debug",
         "request": "launch",
         "type": "dart",
-        "flutterMode": "debug",
         "program": "lib/main_dev.dart",
         "args": [
           "--dart-define=flavor=dev",
