--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none'
 
-version: 1.0.7+20
+version: 1.0.7+21
 
 environment:
   sdk: ">= 3.0.0"
@@ -74,6 +74,7 @@ flutter_icons:
   ios: true
   remove_alpha_ios: true
   image_path: "images/logo/logo.png"
+  adaptive_icon_background: "#554de4"
 
 flutter:
   uses-material-design: true
