--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_svg: ^1.1.4
   dotted_border: ^2.0.0
   brasil_fields: ^1.14.0
+  package_info_plus: ^5.0.1
 
   #Armazenamento
   shared_preferences: ^2.0.15
