--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.isItSafeApp</string>
+	<string>com.isitsafe.app</string>
 	<key>PROJECT_ID</key>
 	<string>is-it-safe-29b67</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:985821235413:ios:bb3376032fb9cf855bfa5c</string>
+	<string>1:985821235413:ios:079e0280c43f30035bfa5c</string>
 </dict>
 </plist>
